# backend/docs/openapi.yaml
@@ -38,7 +38,7 @@ paths:
                 $ref: '#/components/schemas/SeasonsResponse'
 
 
-  /seasons/{seasonId}:
+  /seasons/{seasonId}/races:
     get:
       summary: Get details of a specific F1 season
       description: Returns all the races in a specific F1 season
@@ -99,8 +99,8 @@ components:
           type: integer
           example: 12
         year:
-          type: string
-          example: "2020"
+          type: integer
+          example: 2020
         url:
           type: string
           format: uri
