# backend/src/api/races/races.route.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { racesController } from './races.controller';
+
+const router = Router();
+
+router.get('/seasons/:seasonId/races', racesController);
+
+export default router;
